# typr

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  ThemeContext.tsx  api.ts  drill-engine.ts  index.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.ci.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: KeyboardHeatmap.tsx  Layout.tsx  PracticeVsDrills.tsx  RoundReview.tsx  TypingTest.tsx  UpdateNotice.tsx
apps/desktop/src/pages/: Dashboard.tsx  Drills.tsx  Onboarding.tsx  Practice.tsx  Settings.tsx
crates/typr-analytics/: Cargo.toml
crates/typr-analytics/src/: correction.rs  correction_test.rs  lib.rs  profile.rs  rollup.rs
crates/typr-capture/: Cargo.toml
crates/typr-capture/src/: capture.rs  lib.rs  privacy.rs
crates/typr-db/: Cargo.toml
crates/typr-db/migrations/: 001_initial.sql
crates/typr-db/src/: error.rs  lib.rs  migrations.rs  queries.rs
docs/: privacy.md  signing.md  threat-model.md  wsl-development.md
scripts/: setup-wsl.sh
