[package]
name = "typr-desktop"
version.workspace = true
edition.workspace = true
description = "Typr — personal typing coach"

[lib]
name = "typr_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
typr-db = { path = "../../../crates/typr-db" }
typr-capture = { path = "../../../crates/typr-capture" }
typr-analytics = { path = "../../../crates/typr-analytics" }

# Auto-update is only available on desktop targets.
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
